fix(frontend): show distribution time on mobile

--- a/packages/frontend/src/components/campaign-details/leaderboard/styles.module.css
+++ b/packages/frontend/src/components/campaign-details/leaderboard/styles.module.css
@@ -7,7 +7,7 @@
 }
 
 .subtitleContainer {
-    @apply hidden sm:flex items-center gap-1;
+    @apply flex flex-col sm:flex-row items-start sm:items-center gap-1;
 }
 
 .cardsWrapper {
